samples/_failures_safe/1761416199_cea0d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64a2118f.c: In function ‘main’:
./samples/SAFE/__tmp_64a2118f.c:155:12: error: expected identifier or ‘(’ at end of input
  155 |     struct TextAnaly
      |            ^~~~~~~~~
./samples/SAFE/__tmp_64a2118f.c:155:12: error: expected declaration or statement at end of input
